<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:fitsSystemWindows="false"
    android:background="@drawable/app_background_shape"
    tools:context="cg.stevendende.gadsleaderboard.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:gravity="center"

                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/gads_toobar_bg"
                    android:scaleType="fitCenter"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/submit_title_top_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Project Submission"
                android:textStyle="bold"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/holo_orange_light"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:alpha="0.5"
                android:background="@drawable/submit_title_line_shape"
                />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"

                android:layout_marginEnd="@dimen/submit_name_horizontal_margin"
                android:layout_marginRight="@dimen/submit_name_horizontal_margin"
                android:background="@drawable/text_input_background"
                android:hint="@string/first_name"
                android:padding="@dimen/edittext_padding"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:layout_marginStart="@dimen/submit_name_horizontal_margin"
                android:layout_marginLeft="@dimen/submit_name_horizontal_margin"
                android:background="@drawable/text_input_background"
                android:hint="@string/last_name"
                android:padding="@dimen/edittext_padding"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/text_input_background"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edittext_padding"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/text_input_background"
            android:hint="@string/project_on_github_link"
            android:inputType="textImeMultiLine"
            android:padding="@dimen/edittext_padding"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_submit_bg_shape"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>